packages/typ/tests/fixtures/diagnostics/0144_adt_nested_annotation_mismatch_02.ml
type rec_beta = { first : int * bool; second : bool }
let _ : rec_beta = { first = (true, 1); second = false }
